# excel-cell-mapper

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
docs/api/: reference.md
docs/design/: overview.md
docs/examples/: usage.md
docs/schema/: dsl.md
scripts/: pre-push
src/excel_cell_mapper/: __init__.py  _cell_ref.py  _exceptions.py  _mapper.py
tests/: conftest.py  test_api.py  test_errors.py  test_map.py  test_options.py
