[project]
name = "excel-cell-mapper"
version = "0.1.0"
description = "Map Excel cells to Python objects using a DSL"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
